# Neolink

./: README.MD
neolink-backend/: .gitignore  Cargo.toml
neolink-backend/src/: main.rs
neolink-frontend/: package-lock.json  package.json
neolink-frontend/app/: page.tsx
neolink-frontend/lib/: db-connection.ts  db.ts
neolink-frontend/scripts/: init-db.ts  schema.sql
