[package]
name = "neolink-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "sync"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

# Use a specific version of libp2p with the correct features
libp2p = { version = "0.51", features = ["tcp", "tokio", "noise", "yamux", "ping"] }

tokio-postgres = "0.7"
dotenv = "0.15"
libp2p-noise = "0.42"
